<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fzuclover.putmedown.businessmodule.totaltimingtoday.TotalTimingTodayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.fzuclover.putmedown.view.WaveProgressView
            android:id="@+id/wave_progress_view"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="@drawable/circle"
            />

        <Button
            android:id="@+id/start_timing_btn"
            android:layout_width="143dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/corner_blue"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:text="@string/start"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/drawer_background">

        <ImageView
            android:id="@+id/current_place_img"
            android:layout_width="240dp"
            android:layout_height="170dp"
            android:src="@mipmap/head1"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_place_img"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/achievement_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:padding="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_achievement"
                    android:textSize="20sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/history_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:padding="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:textSize="20sp"/>

            </LinearLayout>


        </LinearLayout>

        <at.markushi.ui.CircleButton
            android:id="@+id/login_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/right_button"
            android:layout_marginTop="450dp"
            android:layout_marginLeft="110dp"
            app:cb_color="#99CC00"
            app:cb_pressedRingWidth="80dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/set_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:background="@color/drawer_background"
                android:text="@string/set"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/gray"/>
            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_marginTop="11dp"
                android:background="@color/gray"
                />
            <TextView
                android:id="@+id/logout_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:background="@color/drawer_background"
                android:text="@string/logout"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/gray"
                 />
        </LinearLayout>
    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
